Using constants for default keystore type, file names, password
- in few tests changed to different to avoid confusion

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>