@@ -20,6 +20,7 @@ package org.glassfish.tests.embedded.web;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.security.SecureRandom;
 import java.security.cert.X509Certificate;
@@ -34,7 +35,6 @@ import org.glassfish.embeddable.Deployer;
 import org.glassfish.embeddable.GlassFish;
 import org.glassfish.embeddable.GlassFishException;
 import org.glassfish.embeddable.GlassFishRuntime;
-import org.glassfish.embeddable.GlassFishVariable;
 import org.glassfish.embeddable.web.HttpsListener;
 import org.glassfish.embeddable.web.WebContainer;
 import org.glassfish.embeddable.web.config.SslConfig;
@@ -46,6 +46,7 @@ import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
+import static org.glassfish.embeddable.GlassFishVariable.KEYSTORE_FILE;
 import static org.glassfish.main.jdke.props.SystemProperties.setProperty;
 
 /**
@@ -56,17 +57,17 @@ import static org.glassfish.main.jdke.props.SystemProperties.setProperty;
 public class EmbeddedAddHttpsListenerTest {
 
     @TempDir
-    static File tempDir;
-    static GlassFish glassfish;
-    static WebContainer embedded;
-    static File root;
-    static String contextRoot = "test";
+    private static File tempDir;
+    private static GlassFish glassfish;
+    private static WebContainer embedded;
+    private static File root;
+    private static File keystore;
 
     @BeforeAll
     public static void setupServer() throws Exception {
 
-        File keystore = new File(tempDir, "keystore.jks");
-        setProperty(GlassFishVariable.KEYSTORE_FILE.getSystemPropertyName(), keystore.getAbsolutePath(), true);
+        keystore = new File(tempDir, "test_keystore.p12");
+        setProperty(KEYSTORE_FILE.getSystemPropertyName(), keystore.getAbsolutePath(), true);
         KeyTool keyTool = new KeyTool(keystore, "changeit".toCharArray());
         keyTool.generateKeyPair("s1as", "CN=localhost", "RSA", 1);
 
@@ -87,7 +88,6 @@ public class EmbeddedAddHttpsListenerTest {
 
     private void createHttpsListener(int port,
                                      String name,
-                                     String keystore,
                                      String password,
                                      String certname) throws Exception {
 
@@ -96,11 +96,8 @@ public class EmbeddedAddHttpsListenerTest {
         listener.setId(name);
 
         String keyStorePath = root.getAbsolutePath() + keystore;
-        String trustStorePath = root.getAbsolutePath() + "/cacerts.jks";
-        SslConfig sslConfig = new SslConfig(keyStorePath, trustStorePath);
+        SslConfig sslConfig = new SslConfig(keyStorePath, null);
         sslConfig.setKeyPassword(password.toCharArray());
-        String trustPassword = "changeit";
-        sslConfig.setTrustPassword(trustPassword.toCharArray());
         if (certname != null) {
             sslConfig.setCertNickname(certname);
         }
@@ -110,16 +107,15 @@ public class EmbeddedAddHttpsListenerTest {
     }
 
     private void verify(int port) throws Exception {
-
-        URL servlet = new URL("https://localhost:"+port+"/classes/hello");
+        URL servlet = new URI("https://localhost:" + port + "/classes/hello").toURL();
         HttpsURLConnection uc = (HttpsURLConnection) servlet.openConnection();
-        BufferedReader in = new BufferedReader(new InputStreamReader(uc.getInputStream()));
         StringBuilder sb = new StringBuilder();
-        String inputLine;
-        while ((inputLine = in.readLine()) != null){
-            sb.append(inputLine);
+        try (BufferedReader in = new BufferedReader(new InputStreamReader(uc.getInputStream()))) {
+            String inputLine;
+            while ((inputLine = in.readLine()) != null) {
+                sb.append(inputLine);
+            }
         }
-        in.close();
         System.out.println(sb);
         Assertions.assertEquals("Hello World!", sb.toString());
     }
@@ -127,9 +123,7 @@ public class EmbeddedAddHttpsListenerTest {
     @Test
     public void test() throws Exception {
 
-        createHttpsListener(9191, "default-ssl-listener", "/keystore.jks", "changeit", "s1as");
-        //createHttpsListener(9292, "ssl-listener0", "/keystore0", "password0", "keystore0");
-        //createHttpsListener(9393, "ssl-listener1", "/keystore1", "password1", null);
+        createHttpsListener(9191, "default-ssl-listener", "changeit", "s1as");
 
         Deployer deployer = glassfish.getDeployer();
 
